# mysudoku

./: CMakeLists.txt  readme.md
inc/: block.hpp  color.hpp  common.hpp  displaySymbol.hpp  operate.hpp  scene.hpp
src/: main.cpp  operate.cpp
